WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114731
[EFL] Assertion Failures in Coordinated Graphics after
r148433
https://bugs.webkit.org/show_bug.cgi?id=114731
Summary
[EFL] Assertion Failures in Coordinated Graphics after r148433
Dominik Röttsches (drott)
Reported
2013-04-17 03:52:32 PDT
A lot of tests started failing after
r148433
(+ build fix in
r148477
) with the following assertion failure: crash log for WebKitTestRunner (pid 2606): STDOUT: <empty> STDERR: ASSERTION FAILED: m_state.drawsContent && m_state.contentsVisible && !m_state.size.isEmpty() STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp(121) : void WebCore::TextureMapperLayer::paintSelf(const WebCore::TextureMapperPaintOptions&) STDERR: 1 0x7f5ed4f3a268 WebCore::TextureMapperLayer::paintSelf(WebCore::TextureMapperPaintOptions const&) [...] STDERR: 26 0x7f5ed4f3a956 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 27 0x7f5ed4f3ac77 WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 28 0x7f5ed4f3c1ea WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 29 0x7f5ed4f39ecf WebCore::TextureMapperLayer::paint() STDERR: 30 0x7f5ed4f1fc97 WebCore::CoordinatedGraphicsScene::paintToCurrentGLContext(WebCore::TransformationMatrix const&, float, WebCore::FloatRect const&, unsigned int) STDERR: 31 0x7f5ed137b6e5 WebKit::WebView::paintToCurrentGLContext() STDERR: LEAK: 5 CachedResource STDERR: LEAK: 63 WebCoreNode
Attachments
Patch
(1.75 KB, patch)
2013-04-22 23:39 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2013-04-17 03:55:46 PDT
I am pretty certain about the revisions from which the assertion failure started to occur but I haven't had time to actually verify by rolling this one out and testing again.
Noam Rosenthal
Comment 2
2013-04-22 23:39:21 PDT
Created
attachment 199155
[details]
Patch
Gyuyoung Kim
Comment 3
2013-04-22 23:41:13 PDT
Comment on
attachment 199155
[details]
Patch rs=me
WebKit Commit Bot
Comment 4
2013-04-22 23:50:02 PDT
Comment on
attachment 199155
[details]
Patch Clearing flags on attachment: 199155 Committed
r148945
: <
http://trac.webkit.org/changeset/148945
>
WebKit Commit Bot
Comment 5
2013-04-22 23:50:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug