[EFL] Assertion Failures in Coordinated Graphics after r148433 https://bugs.webkit.org/show_bug.cgi?id=114731

Patch by Noam Rosenthal <noam@webkit.org> on 2013-04-22
Reviewed by Gyuyoung Kim.

The assert is incorrect. In some cases in coordinated graphics we may have a backing store
and drawsContent would be set to false.

No new tests.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelf):

Canonical link: https://commits.webkit.org/133444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148945 268f45cc-cd09-0410-ab3c-d52691b4dbfc